Fixed footer on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -174,6 +174,14 @@
         }
     }
 
+    @include media-query($medium) {
+        text-align: center;
+
+        .site-title {
+            margin: 1em auto !important;
+        }
+    }
+
     @include media-query($small) {
         padding: $spacing-unit $spacing-unit/3;
 
@@ -185,6 +193,10 @@
             margin-top: $spacing-unit;
             font-size: 14px !important;
             text-align: center !important;
+        }
+
+        .left, .right {
+            float: none;
         }
     }
 
@@ -279,6 +291,14 @@
                 &:before {
                     content: "\00BB";
                     margin-right: 5px;
+                }
+            }
+            @include media-query($smallest) {
+                height: auto;
+
+                li { 
+                    display: block;
+                    width: auto;
                 }
             }
         }
